# OmniGBDT

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: wheels.yml
docs/: api.rst  conf.py  development.rst  differences.rst  example.rst  index.rst  install.rst  parameters.rst
examples/: test.py
omnigbdt/: __init__.py  histogram.py  lib_utils.py  models.py  plotting.py  sklearn.py
src/: api.cpp  booster.cpp  booster.h  dataStruct.h  io.cpp  io.h  main.cpp  tree.cpp  tree.h
tests/: test_smoke.py
