[build-system]
requires = [
  "scikit-build-core>=0.10",
  "ninja>=1.11; platform_system == 'Windows'",
]
build-backend = "scikit_build_core.build"

[project]
name = "omnigbdt"
version = "0.1.2"
description = "Gradient boosted decision trees for multiple outputs"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [
  { name = "Francis Laclé", email = "4205424+flacle@users.noreply.github.com" },
]
dependencies = [
  "numpy",
  "numba>=0.61",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
plot = [
  "graphviz",
]
sklearn = [
  "scikit-learn>=1.4",
]
test = [
  "pytest>=8",
]

[project.urls]
Documentation = "https://omnigbdt.readthedocs.io"
Source = "https://github.com/flacle/OmniGBDT"
Issues = "https://github.com/flacle/OmniGBDT/issues"
Upstream = "https://github.com/zzd1992/GBDTMO"

[tool.scikit-build] 
cmake.source-dir = "."
cmake.build-type = "Release"
editable.mode = "inplace"
wheel.packages = ["omnigbdt"]
sdist.include = [
  "CMakeLists.txt",
  "LICENSE",
  "LICENSE.upstream",
  "NOTICE",
  "README.md",
  "docs/**",
  "examples/**",
  "omnigbdt/**",
  "src/**",
  "tests/**",
]
